# rust_ec2_control

./: Cargo.toml  Makefile  samconfig.toml  template.yaml
src/: ec2_control.rs  ec2_control_lambda.rs  main.rs
