[package]
name = "rust_ec2_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime="0.5"
tokio = { version="1", features=["full"]}
serde = {version="1",features=["derive"]}
serde_json = "1"
aws-config = "0.12.0"
aws-sdk-ec2 = "0.12.0"

